...

    <!-- GameActivity's Strings -->
    <string name="ga_undo">Undo:%1$d</string>
    <string name="ga_save">Save</string>
    <string name="ga_logged_as">Logged in:</string>
    <string name="ga_current_user">%1$s</string>
    <string name="ga_guest_user">Guest</string>
    <string name="ga_cannot_undo">Not Able To Undo!</string>
    <string name="ga_auto_saved">Auto-saved!</string>\
    <string name="ga_manual_save">Saved!</string>
    <string name="ga_guest_save">Cannot save as guest!</string>

    <!-- GameActivity's Strings -->
    <string name="gs_confirm_deletion">Delete all games?</string>

    <!-- Scoreboard's Strings -->
    <string name="sb_game">%1$s</string>
    <string name="gsb_logged_as">Logged as: %1$s</string>
    <string name="gsb_no_score">Guest has no saved scores!</string>

...
    <string name="d_undo">Undos</string>
    <string name="d_default_undos">3</string>
    <string name="d_hint_auto_dimensions">3</string>
    <string name="d_hint_row">Rows</string>
    <string name="d_hint_col">Columns</string>
        <!-- Dialog Toast's Strings -->
        <string name="d_toast_empty_fields">Fields must not be empty</string>
        <string name="d_toast_let_3">Rows/Columns cannot be less than 3</string>
        <string name="d_toast_lat_31">Rows/Columns cannot be larger than 31</string>
        <string name="d_toast_succ_load">Load Successful!</string>
        <string name="d_toast_invalid_url">Invalid image link, make sure to copy image link address directly!</string>
        <string name="d_toast_racecar">You must wait for your image to finish downloading!</string>
        <string name="d_toast_fix_url">Your url is not valid for board creation!</string>
        <string name="d_toast_wait_url">Cannot create board when image is downloading!</string>

    <!-- LoadList's Strings-->
    <string name="ll_text_game">text game</string>
    <string name="ll_difficulty_text">difficulty</string>
    <string name="ll_load_game">Load Game</string>

    <!-- dialog SlidingDifficulty's Strings-->
    <string name="sd_confirm">Confirm</string>
    <string name="sd_x">x</string>
    <string name="sd_num_default_undos">3</string>
    <string name="sd_insert_image_url_hint">Custom URL Image</string>
...
