<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item1"
        android:title="3x3">
    </item>
    <item android:id="@+id/item2"
        android:title="4x4">
    </item>
    <item android:id="@+id/item3"
        android:title="5x5">
    </item>
    <item android:id="@+id/item4"
        android:title="Other...">
    </item>

</menu>