...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <EditText
        android:id="@+id/text_row"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:autofillHints="@string/d_hint_auto_dimensions"
        android:ems="10"
        android:hint="@string/d_hint_row"
        android:inputType="number" />

    <EditText
        android:id="@+id/text_column"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/textView8"
        android:autofillHints="@string/d_hint_auto_dimensions"
        android:ems="10"
        android:hint="@string/d_hint_col"
        android:inputType="number" />

    <Button
        android:id="@+id/button_confirm_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignEnd="@+id/text_column"
        android:layout_alignParentStart="true"
        android:layout_marginStart="212dp"
...
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/d_undo" />

    <EditText
        android:id="@+id/text_undos"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_confirm_difficulty"
        android:layout_alignBottom="@+id/button_confirm_difficulty"
        android:layout_marginStart="27dp"
        android:layout_marginTop="0dp"
...
